@@ -1,5 +1,6 @@
-package com.alodiga.wallet.controllers.transferWallet;
+package com.alodiga.wallet.convert;
 
+import com.alodiga.wallet.controllers.transferWallet.*;
 import com.alodiga.wallet.common.ejb.ProductEJB;
 import com.alodiga.wallet.common.exception.KeyLongException;
 import com.alodiga.wallet.controllers.operationsCard.*;
@@ -17,7 +18,11 @@ import com.ericsson.alodiga.ws.RespuestaUsuario;
 import com.ericsson.alodiga.ws.Usuario;
 import java.rmi.RemoteException;
 import java.security.NoSuchAlgorithmException;
+import java.text.DecimalFormat;
+import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Calendar;
+import java.util.Date;
 import java.util.List;
 import java.util.Locale;
 import java.util.ResourceBundle;
@@ -34,33 +39,33 @@ import javax.faces.context.FacesContext;
 import javax.servlet.http.HttpSession;
 import org.primefaces.event.FlowEvent;
 
-@ManagedBean(name = "transferWalletController")
+@ManagedBean(name = "converterController")
 @ViewScoped
-public class TransferWalletController {
+public class converterController {
 
-    private Product selectedProduct;
+    private Long respuestaListadoProductoId;
 
+    private static ProductEJB productEJBProxy;
     private HttpSession session;
     private Usuario user;
     private ResourceBundle msg;
-
-    private Long respuestaListadoProductoId;
+    private String idTranstaction;
+    private Boolean includeComission;
+    private Product selectedProduct;
+    private Product selectedProductDestinate;
     private List<Product> productList = new ArrayList();
     private List<RespuestaListadoProducto> listadoProductos = new ArrayList<RespuestaListadoProducto>();
-    private Long productId;
-    private boolean skip;
-    private String email;
-    private static ProductEJB productEJBProxy;
-    private String firstName;
-    private String lastName;
-    private String numberPhone;
-    private String destinate;
-    private String origin;
     private Float mount;
-    private String concept;
+    private Float amountCommission;
+    private Float valueCommission;
+    private Float totalDebit;
+    private Float amountConversion;
+    private Float exchangeRateProductSource;
+    private Float exchangeRateProductDestination;
+    private int isPercentCommision;
+    private String percentComission;
     private String keyOperations;
-    private Long userDestinationId;
-    private String idTranstaction;
+    private String date;
 
     @PostConstruct
     public void init() {
@@ -76,8 +81,7 @@ public class TransferWalletController {
 
             //Se obtiene la lista de productos del usuario
             productList = productEJBProxy.getProductsByWalletUser(Long.valueOf(user.getUsuarioID()));
-                    
-            
+
         } catch (Exception ex) {
             ex.printStackTrace();
             Logger.getLogger(RechargeCardController.class.getName()).log(Level.SEVERE, null, ex);
@@ -113,7 +117,7 @@ public class TransferWalletController {
     }
 
     public static void setProductEJBProxy(ProductEJB productEJBProxy) {
-        TransferWalletController.productEJBProxy = productEJBProxy;
+        converterController.productEJBProxy = productEJBProxy;
     }
 
     public Product getSelectedProduct() {
@@ -121,8 +125,15 @@ public class TransferWalletController {
     }
 
     public void setSelectedProduct(Product selectedProduct) {
-        productId = selectedProduct.getId();
         this.selectedProduct = selectedProduct;
+    }
+
+    public Product getSelectedProductDestinate() {
+        return selectedProductDestinate;
+    }
+
+    public void setSelectedProductDestinate(Product selectedProductDestinate) {
+        this.selectedProductDestinate = selectedProductDestinate;
     }
 
     public ResourceBundle getMsg() {
@@ -142,92 +153,12 @@ public class TransferWalletController {
         this.listadoProductos = listadoProductos;
     }
 
-    public String getEmail() {
-        return email;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-    public String getFirstName() {
-        return firstName;
-    }
-
-    public void setFirstName(String firstName) {
-        this.firstName = firstName;
-    }
-
-    public String getLastName() {
-        return lastName;
-    }
-
-    public void setLastName(String lastName) {
-        this.lastName = lastName;
-    }
-
-    public String getNumberPhone() {
-        return numberPhone;
-    }
-
-    public void setNumberPhone(String numberPhone) {
-        this.numberPhone = numberPhone;
-    }
-
-    public String getDestinate() {
-        return destinate;
-    }
-
-    public void setDestinate(String destinate) {
-        this.destinate = destinate;
-    }
-
-    public String getOrigin() {
-        return origin;
-    }
-
-    public void setOrigin(String origin) {
-        this.origin = origin;
-    }
-
     public Float getMount() {
         return mount;
     }
 
     public void setMount(Float mount) {
         this.mount = mount;
-    }
-
-    public String getConcept() {
-        return concept;
-    }
-
-    public void setConcept(String concept) {
-        this.concept = concept;
-    }
-
-    public String getKeyOperations() {
-        return keyOperations;
-    }
-
-    public void setKeyOperations(String keyOperations) {
-        this.keyOperations = keyOperations;
-    }
-
-    public Long getProductId() {
-        return productId;
-    }
-
-    public void setProductId(Long productId) {
-        this.productId = productId;
-    }
-
-    public Long getUserDestinationId() {
-        return userDestinationId;
-    }
-
-    public void setUserDestinationId(Long userDestinationId) {
-        this.userDestinationId = userDestinationId;
     }
 
     public RespuestaListadoProducto getListadoProductos(long id) {
@@ -248,6 +179,94 @@ public class TransferWalletController {
         this.idTranstaction = idTranstaction;
     }
 
+    public Boolean getIncludeComission() {
+        return includeComission;
+    }
+
+    public void setIncludeComission(Boolean includeComission) {
+        this.includeComission = includeComission;
+    }
+
+    public Float getAmountCommission() {
+        return amountCommission;
+    }
+
+    public void setAmountCommission(Float amountCommission) {
+        this.amountCommission = amountCommission;
+    }
+
+    public Float getValueCommission() {
+        return valueCommission;
+    }
+
+    public void setValueCommission(Float valueCommission) {
+        this.valueCommission = valueCommission;
+    }
+
+    public Float getTotalDebit() {
+        return totalDebit;
+    }
+
+    public void setTotalDebit(Float totalDebit) {
+        this.totalDebit = totalDebit;
+    }
+
+    public Float getAmountConversion() {
+        return amountConversion;
+    }
+
+    public void setAmountConversion(Float amountConversion) {
+        this.amountConversion = amountConversion;
+    }
+
+    public Float getExchangeRateProductSource() {
+        return exchangeRateProductSource;
+    }
+
+    public void setExchangeRateProductSource(Float exchangeRateProductSource) {
+        this.exchangeRateProductSource = exchangeRateProductSource;
+    }
+
+    public Float getExchangeRateProductDestination() {
+        return exchangeRateProductDestination;
+    }
+
+    public void setExchangeRateProductDestination(Float exchangeRateProductDestination) {
+        this.exchangeRateProductDestination = exchangeRateProductDestination;
+    }
+
+    public int getIsPercentCommision() {
+        return isPercentCommision;
+    }
+
+    public void setIsPercentCommision(int isPercentCommision) {
+        this.isPercentCommision = isPercentCommision;
+    }
+
+    public String getPercentComission() {
+        return percentComission;
+    }
+
+    public void setPercentComission(String percentComission) {
+        this.percentComission = percentComission;
+    }
+
+    public String getKeyOperations() {
+        return keyOperations;
+    }
+
+    public void setKeyOperations(String keyOperations) {
+        this.keyOperations = keyOperations;
+    }
+
+    public String getDate() {
+        return date;
+    }
+
+    public void setDate(String date) {
+        this.date = date;
+    }
+
     public static Boolean IsNumberPhone(String value) {
         try {
             return (value.matches("[+]?\\d*") && value.equals("") == false);
@@ -257,101 +276,103 @@ public class TransferWalletController {
         }
 
     }
-    
+
     public void addMessage(FacesMessage.Severity severity, String summary, String detail) {
         FacesContext.getCurrentInstance().
                 addMessage(null, new FacesMessage(severity, summary, detail));
     }
 
-    public String onFlowProcess(FlowEvent event) {       
-        RespuestaCodigoRandom resp = new RespuestaCodigoRandom();
+    public String onFlowProcess(FlowEvent event) {
+        APIAlodigaWalletProxy walletProxy = new APIAlodigaWalletProxy();
+        TransactionResponse transactionResponse = new TransactionResponse();
         RespuestaUsuario respUser = new RespuestaUsuario();
         APIRegistroUnificadoProxy unificadoProxy = new APIRegistroUnificadoProxy();
-        TransactionResponse transactionResponse = null;
-
         switch (event.getOldStep()) {
-            case "productAndEmail":        
-                    try {
-                if (!IsNumberPhone(email)) {
-                    respUser = unificadoProxy.getUsuarioporemail("usuarioWS", "passwordWS", email);
-                } else {
-                    respUser = unificadoProxy.getUsuariopormovil("usuarioWS", "passwordWS", email);
-                }
-                System.out.println("respuesta " + respUser.getCodigoRespuesta());
-                if (respUser.getCodigoRespuesta().equals("00")) {
-                    firstName = respUser.getDatosRespuesta().getNombre();
-                    lastName = respUser.getDatosRespuesta().getApellido();
-                    numberPhone = respUser.getDatosRespuesta().getMovil();
-                    destinate = respUser.getDatosRespuesta().getCuenta().getNumeroCuenta();
-                    userDestinationId = Long.valueOf(respUser.getDatosRespuesta().getUsuarioID());
-                } else {
-                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Usuario", "No se encontró el usuario");                    
-                    return "productAndEmail";
+            case "convertProduct":
+                int comission = 0;
+                Short num = new Short("1");
+                try {
+                    if (includeComission) {
+                        comission = 1;
+                        percentComission = "SI";
+                    }else{
+                        percentComission = "NO";
+                    }
+
+                    if (selectedProduct.getId().equals(selectedProductDestinate.getId())) {
+                        addMessage(FacesMessage.SEVERITY_ERROR, "No se puede convertir el mismo producto", "");
+                        return "convertProduct";
+                    } else {
+                        transactionResponse = walletProxy.previewExchangeProduct(user.getEmail(), selectedProduct.getId(), selectedProductDestinate.getId(), mount, comission);
+
+                        if (transactionResponse.getCodigoRespuesta().equals("00")) {                      
+
+                            amountCommission = transactionResponse.getAmountCommission();
+                            valueCommission = transactionResponse.getValueCommission();
+                            totalDebit = transactionResponse.getTotalDebit();
+                            amountConversion = transactionResponse.getAmountConversion();
+                            exchangeRateProductSource = transactionResponse.getExchangeRateProductSource();
+                            exchangeRateProductDestination = transactionResponse.getExchangeRateProductDestination();
+                        }
+                    }
+
+                } catch (Exception e) {
+                    addMessage(FacesMessage.SEVERITY_ERROR, "No se puede hacer la conversión", "");
+                    return "convertProduct";
                 }
 
-            } catch (Exception e) {
-                addMessage(FacesMessage.SEVERITY_ERROR, "Error Usuario", "No existen datos asociados al usuario");                                
-                return "productAndEmail";
-            }
-
-            break;
+                break;
             case "key": {
+                comission = 0;
                 try {
                     String pass = S3cur1ty3Cryt3r.aloDesencript(keyOperations, "1nt3r4xt3l3ph0ny", null, "DESede", "0123456789ABCDEF");
                     respUser = unificadoProxy.validarPin("usuarioWS", "passwordWS", user.getUsuarioID(), pass);
 
                     if (respUser.getCodigoRespuesta().equals("00")) {
-                        System.out.println("paso " + respUser.getCodigoRespuesta());
+                        System.out.println("paso validacion pin" + respUser.getCodigoRespuesta());
+                        if (includeComission) {
+                            comission = 1;
+                        }
+                        transactionResponse = walletProxy.exchangeProduct(user.getEmail(), selectedProduct.getId(), selectedProductDestinate.getId(), mount, "", comission);
+                        idTranstaction = transactionResponse.getIdTransaction();
+                        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MMM-dd HH:mm:ss");
+                        Calendar calendar = Calendar.getInstance();
+                        Date dateF =  calendar.getTime();                       
+                        date = sdf.format(dateF);
+                        addMessage(FacesMessage.SEVERITY_INFO, "Conversión satisfactoria", "");
                     } else {
                         addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");
-                        return "key";
+                        return "convertProduct";
                     }
 
                 } catch (NoSuchAlgorithmException e) {
-                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");                    
-                    return "productAndEmail";
+                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");
+                    return "convertProduct";
                 } catch (IllegalBlockSizeException e) {
-                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");                    
-                    return "productAndEmail";
+                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");
+                    return "convertProduct";
                 } catch (NoSuchPaddingException e) {
-                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");                    
-                    return "productAndEmail";
+                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");
+                    return "convertProduct";
                 } catch (BadPaddingException e) {
-                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");                    
-                    return "productAndEmail";
+                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");
+                    return "convertProduct";
                 } catch (KeyLongException e) {
-                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");                    
-                    return "productAndEmail";
+                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");
+                    return "convertProduct";
                 } catch (Exception e) {
-                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");                    
-                    return "productAndEmail";
+                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Validar", "No se pudo validar el pin");
+                    return "convertProduct";
                 }
+
             }
+
             break;
             case "confirmation": {
-                try {
-                    APIAlodigaWalletProxy walletProxy = new APIAlodigaWalletProxy();
-                    transactionResponse = walletProxy.saveTransferBetweenAccount("", email, productId, mount, concept, "", userDestinationId);
-
-                    if (transactionResponse.getCodigoRespuesta().equals("00")) {
-                        System.out.println("paso " + transactionResponse.getIdTransaction());
-                        idTranstaction = transactionResponse.getIdTransaction();
-
-                    } else {
-                        addMessage(FacesMessage.SEVERITY_ERROR, "Error Transferencia", "No se pudo realizar la transferencia");                    
-                        return "productAndEmail";
-                    }
-                } catch (RemoteException e) {
-                    addMessage(FacesMessage.SEVERITY_ERROR, "Error Transferencia", "No se pudo realizar la transferencia");                    
-                    return "productAndEmail";
-                }
+                
 
             }
-            break;
-
-            case "confirmationEnd": {
-                return "productAndEmail";
-            }
+            
         }
         return event.getNewStep();
 
